<resources>
    <string name="app_name">TheMovieApps</string>
    <string name="image_posters_placeholder">Image Posters Placeholder</string>
    <string name="judul_film">Judul Film</string>
    <string name="lipsum">Lorem Ipsum Dolor Sit Amet</string>
    <string name="release_date">November, 2019</string>
    <string name="rating_value">10</string>
    <string name="rating_text">Rating</string>
    <string name="genres">Genre</string>
    <string name="favorite">Favorite</string>
    <string name="comment">Comment</string>

    <!--    Serial Movies-->

    <!-- TODO: Remove or change this placeholder text -->

    <!--  Title Tabs View  -->
    <string name="title_1">Movies</string>
    <string name="title_2">TV Shows</string>

    <!-- Menu Titles -->
    <string name="menu_change_lang">Change Language</string>
    <string name="menu_search">Search Movie or TV Show</string>
    <string name="no_data">There is no data</string>
    <string name="no_translations">There is no translation for the language you selected</string>
    <string name="desc_image">Description Image</string>
    <string name="failed_insert_data_exists">Failed to Add Favorite %1$s exists</string>
    <string name="success_insert_data">%1$s Success Added to Favorite</string>
    <string name="success_remove">%1$s Success Remove from Favorite</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="empty_text">No Data</string>
    <string name="setting_reminder">Setting Reminder</string>
    <string name="title_activity_settings">Settings Reminder</string>

    <!-- Preference Titles -->
    <string name="sync_header">Reminder</string>

    <!-- Sync Preferences -->
    <string name="sync_release">Release Reminder</string>
    <string name="sync_daily">Daily Reminder</string>
    <string name="reminder_return_to_app">Reminder for return to app</string>
    <string name="reminder_release">Reminder showing the movie that release today</string>
    <string name="key_release" translatable="false">sync_release</string>
    <string name="key_daily" translatable="false">sync_daily</string>
    <string name="notificaton_configured">Repeating Daily Notification Success</string>
    <string name="notificaton_canceled">Repeating Daily Notification Canceled</string>
    <string name="notificaton_release_canceled">Released Notification Canceled</string>
    <string name="notification_string_message_dailiy">Hi, do you not miss me ?</string>
    <string name="notificaton_release_configured">Release Movie Notification Success</string>

</resources>
