<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/movieFragment">

    <fragment
        android:id="@+id/favoriteFragment"
        android:name="com.example.themovieapps.fragment.FavoriteFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_favorite">
    </fragment>

    <fragment
        android:id="@+id/movieFragment"
        android:name="com.example.themovieapps.fragment.movie.MovieFragment"
        android:label="@string/title_1"
        tools:layout="@layout/fragment_movie">
    </fragment>

    <fragment
        android:id="@+id/serialFragment"
        android:name="com.example.themovieapps.fragment.serial.SerialFragment"
        android:label="@string/title_2"
        tools:layout="@layout/fragment_serial">
    </fragment>
</navigation>