<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    app:cardElevation="0dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <ImageView
            android:id="@+id/img_banner"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:contentDescription="@string/image_posters_placeholder"
            android:scaleType="fitXY" />

        <TextView
            android:id="@+id/tv_title_banner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@id/img_banner"
            android:text="@string/judul_film"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/tv_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_title_banner"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@id/img_banner"
            android:text="@string/release_date" />

        <View
            android:id="@+id/spacer"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/tv_release_date"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/img_banner"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/spacer"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@id/img_banner"
            android:justificationMode="inter_word"
            android:maxLines="3"
            android:text="@string/lipsum"
            android:textStyle="normal"
            tools:ignore="UnusedAttribute" />

        <ImageButton
            android:id="@+id/imageButtonFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/desc_image"
            app:srcCompat="@drawable/ic_bookmark_border_black_24dp" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>